@@ -1,3 +1,7 @@
+2019-10-30  Jason Merrill  <jason@redhat.com>
+
+	* cxx-pretty-print.c (get_fold_operator): Use OVL_OP_INFO.
+
 2019-10-30  Marek Polacek  <polacek@redhat.com>
 
 	PR c++/92134 - constinit malfunction in static data member.
